--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -63,5 +63,6 @@
         <Label x:Name="ANTI_ICE" Content="ANTI-ICE" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="50" Margin="690,10,0,0" Foreground="#FF8C00" FontFamily="{StaticResource OcrFontFamily}" FontWeight="Bold" FontSize="14" BorderBrush="Black" BorderThickness="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         <Label x:Name="APU" Content="APU" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="50" Margin="690,70,0,0" Foreground="#FF8C00" FontFamily="{StaticResource OcrFontFamily}" FontWeight="Bold" FontSize="14" BorderBrush="Black" BorderThickness="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         <Label x:Name="ConnectLabel" HorizontalContentAlignment="Right" Content="" HorizontalAlignment="Left" Margin="395,11,0,0" VerticalAlignment="Top" Foreground="#FF8C00" FontFamily="Roboto Mono" Width="174" FontSize="10"/>
+        <Button x:Name="Test" Content="Test" HorizontalAlignment="Left" Height="22" Margin="495,95,0,0" VerticalAlignment="Top" Width="74" Click="Test_Click"/>
     </Grid>
 </Window>
