--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -38,9 +38,12 @@
         Width="350"
         Height="110"
         Margin="220,10,10,0"
-        Background="#2C2F33"
+        CornerRadius="5" 
         BorderBrush="Black"
         BorderThickness="1">
+            <Border.Background>
+                <ImageBrush ImageSource="pack://application:,,,/Images/ECAM.png" Stretch="UniformToFill"/>
+            </Border.Background>
             <ScrollViewer x:Name="ECAMScrollViewer"
                   Background="Transparent"
                   VerticalScrollBarVisibility="Hidden">
