--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -65,7 +65,7 @@
         Width="200" 
         Height="50" 
         Margin="10,70,0,0" 
-        Foreground="#FF8C00" 
+        Foreground="#cccd3f" 
         FontFamily="{StaticResource OcrFontFamily}" 
         FontWeight="Bold" 
         FontSize="18" 
