--- a/Options.xaml
+++ b/Options.xaml
@@ -2,9 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Options"
-        Background="#2C2F33"
+        Background="Transparent"
         Width="350" Height="110"
         WindowStyle="None" ResizeMode="NoResize"
+        AllowsTransparency="True"
         Icon="pack://application:,,,/Images/app_icon.ico"
         MouseLeftButtonDown="Window_MouseLeftButtonDown">
 
@@ -13,28 +14,31 @@
         <FontFamily x:Key="RobotoMonoFontFamily">/FlySafe;component/Fonts/RobotoMono-Regular.ttf#Roboto Mono</FontFamily>
     </Window.Resources>
 
-    <Grid Background="#2C2F33" Width="350" Height="110">
-        <!-- Чекбокс с шрифтом и текстом "Always on top" -->
-        <CheckBox x:Name="AlwaysOnTopCheckBox" Content="Always on top" HorizontalAlignment="Left" VerticalAlignment="Top"
-                  FontFamily="{StaticResource RobotoMonoFontFamily}" Foreground="White"
-                  Margin="10,10,0,0" Background="#2C2F33" BorderBrush="Black" BorderThickness="1"
-                  Checked="AlwaysOnTopCheckBox_Checked" Unchecked="AlwaysOnTopCheckBox_Unchecked">
-            <CheckBox.Template>
-                <ControlTemplate TargetType="CheckBox">
-                    <Grid>
-                        <!-- Белый квадрат -->
-                        <Border Background="White" BorderBrush="Black" BorderThickness="1" Width="16" Height="16" HorizontalAlignment="Left" VerticalAlignment="Top">
-                            <!-- Галочка (по умолчанию скрыта) -->
-                            <Path x:Name="CheckMark" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                  Data="M 0 5 L 2 7 L 6 1" Stroke="Black" StrokeThickness="2" Opacity="0"/>
-                        </Border>
+    <!-- Скругленные углы -->
+    <Border CornerRadius="5" Background="#2C2F33" BorderBrush="Black" BorderThickness="1">
+        <Grid Width="350" Height="110">
+            <!-- Чекбокс с шрифтом и текстом "Always on top" -->
+            <CheckBox x:Name="AlwaysOnTopCheckBox" Content="Always on top" HorizontalAlignment="Left" VerticalAlignment="Top"
+                      FontFamily="{StaticResource RobotoMonoFontFamily}" Foreground="White"
+                      Margin="10,10,0,0" Background="#2C2F33" BorderBrush="Black" BorderThickness="1"
+                      Checked="AlwaysOnTopCheckBox_Checked" Unchecked="AlwaysOnTopCheckBox_Unchecked">
+                <CheckBox.Template>
+                    <ControlTemplate TargetType="CheckBox">
+                        <Grid>
+                            <!-- Белый квадрат -->
+                            <Border Background="White" BorderBrush="Black" BorderThickness="1" Width="16" Height="16" HorizontalAlignment="Left" VerticalAlignment="Top">
+                                <!-- Галочка (по умолчанию скрыта) -->
+                                <Path x:Name="CheckMark" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                      Data="M 0 5 L 2 7 L 6 1" Stroke="Black" StrokeThickness="2" Opacity="0"/>
+                            </Border>
 
-                        <!-- Текст -->
-                        <ContentPresenter HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,0,0,0"/>
-                    </Grid>
-                </ControlTemplate>
-            </CheckBox.Template>
-        </CheckBox>
-        <Label x:Name="VersionLabel" Content="" HorizontalAlignment="Left" Margin="10,79,0,0" VerticalAlignment="Top" FontFamily="Roboto Mono" Foreground="White" FontSize="10"/>
-    </Grid>
+                            <!-- Текст -->
+                            <ContentPresenter HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,0,0,0"/>
+                        </Grid>
+                    </ControlTemplate>
+                </CheckBox.Template>
+            </CheckBox>
+            <Label x:Name="VersionLabel" Content="" HorizontalAlignment="Left" Margin="10,79,0,0" VerticalAlignment="Top" FontFamily="Roboto Mono" Foreground="White" FontSize="10"/>
+        </Grid>
+    </Border>
 </Window>
